Next release
============

- 100% test coverage.

1.0a4 (2009/1/6)
================

- RESTify CHANGES, move docs in README.txt into Sphinx.

- Remove ``setup.cfg`` (all dependencies available via PyPI).

- Synchronization point with ``repoze.tm`` (0.9).

1.0a3
=====

Allow ``commit_veto`` hook to be specified within Paste config, ala::

   [filter:tm]
   use = repoze.tm:make_tm
   commit_veto = some.package:myfunction

``myfunction`` should take three args: environ, status, headers and
should return True if the txn should be aborted, False if it should be
committed.

Initial PyPI release.

1.0a2 (2008/7/15)
=================

- Provide "commit_veto" hook point (contributed by Alberto Valverde).

- Point easy_install at http://dist.repoze.org/tm2/dev/simple via setup.cfg.
 
1.0a1
=====

- Fork point: we've created repoze.tm2, which is repoze.tm that has a
  dependency only on the 'transaction' package instead of all of ZODB.

- Better documentation for non-Zope usage in README.txt.

0.8
===

- Relaxed requirement for ZODB 3.7.2, since we might need to use the
  package with other verions.  Note that the tests which depend on
  transaction having "doom" semantics don't work with 3.7.2, anyway.

0.7
===

- Depend on PyPI release of ZODB 3.7.2.  Upgrade to this by doing
  bin/easy_install -U 'ZODB3 >= 3.7.1, < 3.8.0a' if necessary.

0.6
===

 - after_end.register and after_end.unregister must now be passed a
   transaction object rather than a WSGI environment to avoid the
   possibility that the WSGI environment used by a child participating
   in transaction management won't be the same one used by the
   repoze.tm package.

 - repoze.tm now inserts a key into the WSGI environment
   (``repoze.tm.active``) if it's active in the WSGI pipeline.  An API
   function, repoze.tm:isActive can be called with a single argument,
   the WSGI environment, to check if the middleware is active.

0.5
===

- Depend on rerolled ZODB 3.7.1 instead of zopelib.
