@@ -7,43 +7,53 @@ class TM:
     def __init__(self, application, commit_veto=None):
         self.application = application
         self.commit_veto = commit_veto
+        self.transaction = transaction # for testing
         
     def __call__(self, environ, start_response):
+        transaction = self.transaction
         environ[ekey] = True
         transaction.begin()
         ctx = {}
+
         def save_status_and_headers(status, headers, exc_info=None):
             ctx.update(status=status, headers=headers)
             return start_response(status, headers, exc_info)
+
         try:
             result = self.application(environ, save_status_and_headers)
         except:
             self.abort()
             raise
-        else:
-            # ZODB 3.8 + has isDoomed
-            if hasattr(transaction, 'isDoomed') and transaction.isDoomed():
+
+        # ZODB 3.8 + has isDoomed
+        if hasattr(transaction, 'isDoomed') and transaction.isDoomed():
+            self.abort()
+            return result
+
+        if self.commit_veto is not None:
+            try:
+                status, headers = ctx['status'], ctx['headers']
+                veto = self.commit_veto(environ, status, headers)
+            except:
                 self.abort()
-            if self.commit_veto is not None:
-                try:
-                    if self.commit_veto(environ, ctx['status'], ctx['headers']):
-                        self.abort()
-                except:
-                    self.abort()
-                    raise
-                else:
-                    self.commit()
+                raise
+
+            if veto:
+                self.abort()
             else:
                 self.commit()
+            return result
+            
+        self.commit()
         return result
 
     def commit(self):
-        t = transaction.get()
+        t = self.transaction.get()
         t.commit()
         after_end.cleanup(t)
 
     def abort(self):
-        t = transaction.get()
+        t = self.transaction.get()
         t.abort()
         after_end.cleanup(t)
 
